--- a/mypage/communication.html
+++ b/mypage/communication.html
@@ -6,6 +6,7 @@
 	<title>밀알 (Mil-All)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="2020 국방 공공데이터 활용 경진대회 출품작" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumBarunGothic@1.0/nanumbarungothicsubset.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
@@ -76,7 +77,7 @@
 				<div class="display-tc">
 					<div class="container">
             <div id='portrait' class='hexagon portrait' style='transform: scale( 1.8 ) rotate(30deg); margin-top: 7rem;'><span></span></div>
-            <p style='padding-top: 9rem'>호롤로롤로로로ㅗㅗ로롤</p>
+            <p style='padding-top: 9rem' id='prop'></p>
           </div>
 				</div>
 			</div>
@@ -88,7 +89,7 @@
 					<div class="col-md-8 col-md-pull-4 animate-box">
             <div style='margin-top: 5rem;'>
               <ol class="even">
-                <div id='communication' class='hexagon clicked' style="transform: scale( 0.8 ) rotate(30deg);"><span><i class='fas fa-satellite icon'></i></span></div>
+                <div id='communication' class='hexagon clicked' style="transform: scale( 0.8 ) rotate(30deg);"><span><i class='fas fa-comments icon'></i></span></div>
               </ol>
               <ol class="odd">
                 <div id='health' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-dumbbell icon'></i></span></div>
@@ -96,7 +97,7 @@
                 <div id='diet' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-utensils icon'></i></span></div>
               </ol>
               <ol class="even">
-                <div id='medical' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-book-medical icon'></i></span></div>
+                <div id='medical' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-notes-medical icon'></i></span></div>
               </ol>
               <div style='display: none; position: absolute; z-index: 10; top: 50%; left: 50%; margin-top: -8rem; margin-left: -11rem; width: 22rem; height: 15rem; border-radius: 50%; border: 3px solid black;'></div>
             </div>
@@ -131,9 +132,9 @@
           <div class="col-md-3 colorlib-widget" style='margin-bottom: 0px!important'>
 						<h4 style='margin-top: 15px'>Team</h4>
 						<ul class="colorlib-footer-links">
-							<li>무슨무슨 담당 - 한주연</li>
-							<li style='margin-bottom: 20px'><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-              <li>개발 담당 - 계룡대근무지원단 수송대대 상병 오병준</li>
+							<li>디자인 담당 - 연세대학교 실내건축학과 한주연</li>
+							<li style='margin-bottom: 20px'><a href="mailto:pathossingh@naver.com"><i class="icon-envelope"></i> pathossingh@naver.com</a></li>
+              <li>개발 담당 - 계룡대근무지원단 상병 오병준</li>
 							<li><a href="mailto:luftaquila@luftaquila.io"><i class="icon-envelope"></i> luftaquila@luftaquila.io</a></li>
 						</ul>
 					</div>
@@ -145,7 +146,7 @@
 						<div class="col-md-4 text-center">
 							<p style='padding: 0px;'>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<br>This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<br>This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>Recreated from original, by LUFT-AQUILA.
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
 							</p>
 						</div>
