--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="2020 국방 공공데이터 활용 경진대회 출품작" />
 
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumBarunGothic@1.0/nanumbarungothicsubset.css">
+    
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
 	
@@ -72,10 +74,10 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>군생활의 모든 것 Mil-All</h2>
-                <p>설명 어쩌고저쩌고</p>
-								<p style='font-size: 15px'>밀알 서비스는 병사들의 이용 편의를 고려하여<br>모바일 환경에 최적화되어 있습니다.<br>PC 접속시 화면이 깨진다면 창 너비를 줄여 주세요.</p>
+								<h2>군생활의 모든 건강<br><span style='font-weight: bold'>밀알 Mil-All</span></h2>
+                <!--<p>설명 어쩌고저쩌고</p>-->
 								<p><a href="login.html" class="btn btn-primary btn-lg btn-custom">시작하기</a></p>
+								<p style='font-size: 15px'>밀알 서비스는 병사들의 이용 편의를 고려하여<br>모바일 환경에 최적화되어 있습니다.<br>PC 접속시 화면이 깨진다면 창 너비를 줄여 주세요.</p>
 							</div>
 						</div>
 					</div>
@@ -152,7 +154,7 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="fas fa-satellite"></i>
+								<i class="fas fa-comments"></i>
 							</span>
 							<div class="desc">
 								<h3>소통의 창</h3>
@@ -202,9 +204,9 @@
           <div class="col-md-3 colorlib-widget" style='margin-bottom: 0px!important'>
 						<h4 style='margin-top: 15px'>Team</h4>
 						<ul class="colorlib-footer-links">
-							<li>무슨무슨 담당 - 한주연</li>
-							<li style='margin-bottom: 20px'><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-              <li>개발 담당 - 계룡대근무지원단 수송대대 상병 오병준</li>
+							<li>디자인 담당 - 연세대학교 실내건축학과 한주연</li>
+							<li style='margin-bottom: 20px'><a href="mailto:pathossingh@naver.com"><i class="icon-envelope"></i> pathossingh@naver.com</a></li>
+              <li>개발 담당 - 계룡대근무지원단 상병 오병준</li>
 							<li><a href="mailto:luftaquila@luftaquila.io"><i class="icon-envelope"></i> luftaquila@luftaquila.io</a></li>
 						</ul>
 					</div>
@@ -216,7 +218,7 @@
 						<div class="col-md-4 text-center">
 							<p style='padding: 0px;'>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<br>This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<br>This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>Recreated from original, by LUFT-AQUILA.
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
 							</p>
 						</div>
@@ -261,7 +263,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
       type: 'POST',
       success: function(res) {
         if(res.result) {
-          if(res.result == "true") $('#toLogin').html("<a onclick='$.ajax({ url: 'https://mil-all.luftaquila.io/api/logout', type: 'POST', success: function(res) { location.reload(); } });'>Logout</a>");
+          if(res.result == "true") $('#toLogin').html("<a onclick=" + '"' + "$.ajax({ url: 'https://mil-all.luftaquila.io/api/logout', type: 'POST', success: function(res) { location.reload(); } });" + '"' + ">Logout</a>");
         }
       }
     });
