--- a/mypage/medical.html
+++ b/mypage/medical.html
@@ -6,6 +6,7 @@
 	<title>밀알 (Mil-All)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="2020 국방 공공데이터 활용 경진대회 출품작" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumBarunGothic@1.0/nanumbarungothicsubset.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
@@ -37,7 +38,9 @@
     <link rel="stylesheet" href="../res/alertify/alertify.core.css" />
     <link rel="stylesheet" href="../res/alertify/alertify.default.css" id="toggleCSS" />
     <link rel="stylesheet" href="../res/micromodal/micromodal.min.css" />
+    <link href="/console/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../res/btn.css" />
+    <link rel="stylesheet" href="/res/inputs.css" />
     <link rel='stylesheet' href='../main.css' />
     <script src="https://kit.fontawesome.com/291664cdf8.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='../res/chart.js/Chart.min.css' />
@@ -76,7 +79,7 @@
 				<div class="display-tc">
 					<div class="container">
             <div id='portrait' class='hexagon portrait' style='transform: scale( 1.8 ) rotate(30deg); margin-top: 7rem;'><span></span></div>
-            <p style='padding-top: 9rem'>호롤로롤로로로ㅗㅗ로롤</p>
+            <p style='padding-top: 9rem' id='prop'></p>
           </div>
 				</div>
 			</div>
@@ -88,7 +91,7 @@
 					<div class="col-md-8 col-md-pull-4 animate-box">
             <div style='margin-top: 5rem;'>
               <ol class="even">
-                <div id='communication' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-satellite icon'></i></span></div>
+                <div id='communication' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-comments icon'></i></span></div>
               </ol>
               <ol class="odd">
                 <div id='health' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-dumbbell icon'></i></span></div>
@@ -96,14 +99,32 @@
                 <div id='diet' class='hexagon notClicked' style="transform: scale( 0.6 ) rotate(30deg);"><span><i class='fas fa-utensils icon'></i></span></div>
               </ol>
               <ol class="even">
-                <div id='medical' class='hexagon clicked' style="transform: scale( 0.8 ) rotate(30deg);"><span><i class='fas fa-book-medical icon'></i></span></div>
+                <div id='medical' class='hexagon clicked' style="transform: scale( 0.8 ) rotate(30deg);"><span><i class='fas fa-notes-medical icon'></i></span></div>
               </ol>
               <div style='display: none; position: absolute; z-index: 10; top: 50%; left: 50%; margin-top: -8rem; margin-left: -11rem; width: 22rem; height: 15rem; border-radius: 50%; border: 3px solid black;'></div>
             </div>
           </div>
           <div class="col-md-4 animate-box" style='margin-top: 7rem'>
             <article>
-            <h2>전염병</h2>
+            <h2>코로나-19</h2>
+            <label class="control control--radio">최근 2주
+              <input type="radio" name="term" value='14' checked/>
+              <div class="control__indicator"></div>
+            </label>&nbsp;&nbsp;
+            <label class="control control--radio">최근 한달
+              <input type="radio" name="term" value='30'/>
+              <div class="control__indicator"></div>
+            </label>&nbsp;&nbsp;
+            <label class="control control--radio">전체 기간
+              <input type="radio" name="term" value='0'/>
+              <div class="control__indicator"></div>
+            </label>
+            <div style='width: 100%; height:300px'><canvas id='covidChart'></canvas></div><br>
+            </article>
+          </div>
+          <div class="col-md-4 animate-box" style='margin-top: 7rem'>
+            <article>
+            <h2>군 내 전염병 감염 현황</h2>
               범례에서 항목을 클릭하면 표에서 제외됩니다.
               <canvas id='medicalChart' style='width: 100%; height: 500px'></canvas><br>
               &nbsp;&nbsp;여름철에는 유행성 이하선염(볼거리)과 말라리아가 주로 유행합니다. 장병들은 개인 위생에 유의하고 모기에 물리지 않도록 주의하시기 바랍니다.<br>
@@ -111,12 +132,28 @@
             </article>
           </div>
           <div class="col-md-4 animate-box" style='margin-top: 7rem'>
-            <article>
-            <h2>코로나-19</h2>
-              <canvas id='covidChart' style='width: 100%; height: 500px'></canvas><br>
+            <article style='overflow-x: scroll'>
+            <h2>주요 군 병원 정보</h2>
+              <span id='locinfo'></span>
+              <table class="table table-bordered" id="hosp" style='width: 800px; table-layout: fixed;' cellspacing="0">
+                <colgroup>
+                  <col width='40px' />
+                  <col width='30px' />
+                  <col width='40px' />
+                  <col width='120px' />
+                </colgroup>
+                <thead>
+                  <tr>
+                    <th>이름</th>
+                    <th>거리(km)</th>
+                    <th>전화번호</th>
+                    <th>주소</th>
+                  </tr>
+                </thead>
+              </table>
             </article>
           </div>
-				</div>
+        </div>
 			</div>
 		</div>
 
@@ -130,9 +167,9 @@
           <div class="col-md-3 colorlib-widget" style='margin-bottom: 0px!important'>
 						<h4 style='margin-top: 15px'>Team</h4>
 						<ul class="colorlib-footer-links">
-							<li>무슨무슨 담당 - 한주연</li>
-							<li style='margin-bottom: 20px'><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-              <li>개발 담당 - 계룡대근무지원단 수송대대 상병 오병준</li>
+							<li>디자인 담당 - 연세대학교 실내건축학과 한주연</li>
+							<li style='margin-bottom: 20px'><a href="mailto:pathossingh@naver.com"><i class="icon-envelope"></i> pathossingh@naver.com</a></li>
+              <li>개발 담당 - 계룡대근무지원단 상병 오병준</li>
 							<li><a href="mailto:luftaquila@luftaquila.io"><i class="icon-envelope"></i> luftaquila@luftaquila.io</a></li>
 						</ul>
 					</div>
@@ -144,7 +181,7 @@
 						<div class="col-md-4 text-center">
 							<p style='padding: 0px;'>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<br>This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<br>This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>Recreated from original, by LUFT-AQUILA.
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
 							</p>
 						</div>
@@ -180,6 +217,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main -->
 	<script src="../js/main.js"></script>
 
+  <script src="/console/vendor/datatables/jquery.dataTables.min.js"></script>
+  <script src="/console/vendor/datatables/dataTables.bootstrap4.min.js"></script>
   <script src='../res/alertify/alertify.min.js'></script>
   <script src='../res/micromodal/micromodal.min.js'></script>
   <script src='../res/chart.js/Chart.bundle.min.js'></script>
