--- a/console/index.html
+++ b/console/index.html
@@ -192,6 +192,7 @@
               <h1 class="h3 mb-0 text-gray-800">멤버 관리</h1>
             </div>
             <div class="table-responsive">
+              <li style='font-size: 0.9rem'>멤버를 클릭하면 각종 정보를 열람할 수 있습니다.</li><br>
               <table class="table table-bordered" id="dataTable" width="100%" style='table-layout: fixed; text-align: center' cellspacing="0">
                 <colgroup>
                   <col width="150px" />
@@ -338,6 +339,9 @@
                   </div>
                 </div>
               </div>
+              
+              <br>
+              <li style='font-size: 0.8rem;'>페이지에서 위치 정보 권한을 요청하는 것은 건강 관리 탭의 군 병원 목록을 거리 순으로 정렬하는 데 사용하기 위함입니다. 위치 정보는 장치나 서버 어디에도 저장되지 않습니다.</li>
             </div>
           </div>
         </div>
