--- a/mypage/diet.html
+++ b/mypage/diet.html
@@ -102,7 +102,7 @@
             </div>
             <div class="col-md-4 animate-box" style='margin-top: 7rem'>
               <article>
-                <h2>식단</h2>
+                <h2>오늘의 식단</h2>
                 <div style='text-align: center; line-height: 3rem;'>
                   <i class='dateMover fas fa-chevron-left' style='position: absolute; left: 5rem; font-size: 3.5rem'></i>
                   <input id="date" class='' style='margin: 100 0;' type="date" value="" />
