--- a/mypage/medical.html
+++ b/mypage/medical.html
@@ -134,6 +134,7 @@
           <div class="col-md-4 animate-box" style='margin-top: 7rem'>
             <article style='overflow-x: scroll'>
             <h2>주요 군 병원 정보</h2>
+              <span style='font-size: 1.2rem; line-height: 1rem'>페이지에서 위치 정보 권한을 요청하는 것은 군 병원을 거리 순으로 정렬하는 데 사용하기 위함입니다. 위치 정보는 장치나 서버 어디에도 저장되지 않습니다.</span><br>
               <span id='locinfo'></span>
               <table class="table table-bordered" id="hosp" style='width: 800px; table-layout: fixed;' cellspacing="0">
                 <colgroup>
