--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="height:700px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+		<section id="home" class="video-hero" style="height:700px;" data-section="home">
 		<div class="overlay"></div>
 			<div class="display-t text-center">
 				<div class="display-tc">
@@ -76,7 +76,7 @@
 							<div class="animate-box">
 								<h2>군생활의 모든 건강<br><span style='font-weight: bold'>밀알 Mil-All</span></h2>
                 <!--<p>설명 어쩌고저쩌고</p>-->
-								<p><a href="login.html" class="btn btn-primary btn-lg btn-custom">시작하기</a></p>
+								<p><a href="login.html" class="btn btn-lg btn-custom" style='background: rgba(0, 0, 0, 0.075); border: 2px solid #fff; font-size: 1.9rem; font-weight: bold'>시작하기</a></p>
 								<p style='font-size: 15px'>밀알 서비스는 병사들의 이용 편의를 고려하여<br>모바일 환경에 최적화되어 있습니다.<br>PC 접속시 화면이 깨진다면 창 너비를 줄여 주세요.</p>
 							</div>
 						</div>
@@ -92,21 +92,21 @@
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_1.jpg" alt="">
+									<img class="img-responsive" src="images/ex_1.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_2.jpg" alt="">
+									<img class="img-responsive" src="images/ex_2.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_3.jpg" alt="">
+									<img class="img-responsive" src="images/ex_3.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -125,7 +125,7 @@
               </span>
 							<div class="desc">
 								<h3>체력 관리</h3>
-								<p>그룹별, 개인별 운동량 목표를 설정하면 달성률, 소모 칼로리 등을 계산해 주어 목표를 달성할 수 있도록 도와줍니다.</p>
+								<p>병 3대 체력검정 종목과 3대 웨이트 트레이닝 종목의 운동량을 매일매일 기록하는 기능을 제공합니다. 그룹 관리자가 그룹 운동량 목표를 설정하면 달성률을 그래프로 표시해 목표를 달성할 수 있도록 도와줍니다.</p>
 							</div>
 						</div>
 					</div>
@@ -136,7 +136,7 @@
 							</span>
 							<div class="desc">
 								<h3>식단 관리</h3>
-								<p>설정한 급양대의 식단과 열량 정보를 알려줍니다. 체력 관리 기능과 연동해 일일 칼로리 관리를 도와줍니다.</p>
+								<p>그룹 관리자가 해당 부대의 식단에 맞게 급양대를 설정하면 일일 식단과 끼니별 열량 정보를 알려줍니다. 체력 관리 기능과 연동하여 섭취 칼로리, 운동으로 소모한 칼로리, 기초대사량을 바탕으로 일일 칼로리 관리를 도와줍니다.</p>
 							</div>
 						</div>
 					</div>
@@ -147,7 +147,7 @@
 							</span>
 							<div class="desc">
 								<h3>건강 관리</h3>
-								<p>국군 부대에서 매년 분기별로 유행하는 주요 감염병 통계를 제공해 질병 위협에 효과적으로 대처할 수 있게 도와줍니다. 이 외에도 인근의 의료기관 정보를 지도상에서 한 눈에 보여줍니다.</p>
+								<p>코로나19 신규 확진자 현황을 2주, 한 달, 전체 기간 단위로 그래프 형태로 제공합니다. 또한, 국군 부대에서 매년 분기별로 유행하는 주요 감염병 통계를 제공해 질병 위협에 효과적으로 대처할 수 있게 도와줍니다. 모든 군 병원의 주소와 전화번호, 현재 위치로부터의 거리 정보를 한 눈에 보여줍니다.</p>
 							</div>
 						</div>
 					</div>
@@ -158,7 +158,7 @@
 							</span>
 							<div class="desc">
 								<h3>소통의 창</h3>
-								<p>그룹 구성원이 이용할 수 있는 게시판 및 댓글 기능을 제공합니다. 지휘관은 공지사항 기능을 통해 손쉽게 전파사항을 전달할 수 있습니다. 어려움을 겪는 병사가 지휘관과 1:1 채팅을 할 수 있는 접근성 높은 서비스를 제공합니다.</p>
+								<p>그룹 구성원이 자유롭게 이용할 수 있는 게시판 및 댓글 기능을 제공합니다. 게시글은 실명 및 익명으로 작성 가능합니다. 그룹 관리자가 공지사항 기능을 통해 손쉽게 전파사항을 전달할 수 있도록 도와줍니다.</p>
 							</div>
 						</div>
 					</div>
