--- a/mypage/communication.html
+++ b/mypage/communication.html
@@ -102,6 +102,7 @@
               <div style='display: none; position: absolute; z-index: 10; top: 50%; left: 50%; margin-top: -8rem; margin-left: -11rem; width: 22rem; height: 15rem; border-radius: 50%; border: 3px solid black;'></div>
             </div>
             <div class="table-responsive" style='margin-top: 7rem; border: none;'>
+              <h2>게시판</h2>
               <table class="table table-bordered" id="board" width="100%" style='table-layout: fixed;' cellspacing="0">
                 <colgroup>
                   <col width="10%" />
