--- a/mypage/health.html
+++ b/mypage/health.html
@@ -105,13 +105,14 @@
           </div>
           <div class="col-md-4 animate-box" style='margin-top: 7rem'>
             <article>
-            <h2>체력</h2>
+            <h2>능력치</h2>
+              연령별 장병 체력 검정 기준표를 바탕으로 불합격을 0, 특급을 100으로 한 그래프입니다.
               <canvas id='healthChart' style='width: 180%; margin-left: -40%;'></canvas>
             </article>
           </div>
           <div class="col-md-4 animate-box" style='margin-top: 7rem'>
             <article>
-              <h2>일일 운동량</h2><br>
+              <h2>일일 운동량 기록</h2><br>
               <div style='text-align: center'>
                 <input id="date" class='' style='margin: 100 0;' type="date" value="" />
               </div><br>
@@ -142,7 +143,7 @@
                 </tr>
                 <tr>
                   <td>스쿼트</td>
-                  <td><input type="number" id="squat" class="healthAmount form-control" placeholder="회" min=0></td>
+                  <td><input type="number" id="squat" class="healthAmount form-control" placeholder="kg" min=0></td>
                 </tr>
                 <tr>
                   <td>추가섭취 칼로리</td>
