--- a/console/index.html
+++ b/console/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="/res/micromodal/micromodal.min.css" />
     <link rel='stylesheet' href='../res/chart.js/Chart.min.css' />
     <link rel='stylesheet' href='css/console.css'>
+	  <script src="/res/polyfill.js"></script>
+
   </head>
   <body id="page-top">
     <!-- Page Wrapper -->
@@ -138,7 +140,7 @@
               </tr>
               <tr>
                 <td>3km 달리기</td>
-                <td><input type='number' id='3km_min'style='width: 30%' placeholder='분'> : <input type='number' id='3km_sec'style='width: 30%' placeholder='초'></td>
+                <td><input type='number' id='3km_min' style='width: 30%' placeholder='분'> : <input type='number' id='3km_sec' style='width: 30%' placeholder='초'></td>
               </tr>
               <tr>
                 <td>윗몸일으키기</td>
