--- a/login.html
+++ b/login.html
@@ -102,7 +102,10 @@
 								<span class="btn btn-primary" onclick='login();'>로그인</span>
 								<a href='register.html' class="btn btn-info">회원가입</a>
 							</div>
-						</form>		
+						</form>
+            테스트 계정 아이디는 다음과 같습니다.<br>
+            관리자 ID: 11111 / PW: 11111<br>
+            멤버 ID: 22222 / PW: 22222
 					</div>
 				</div>
 			</div>
